Kubernetes/bootstrap/longhorn/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.nerine.dev`)
      services:
        - name: longhorn-frontend
          port: 80
      middlewares:
        - name: public-chain
          namespace: traefik
        - name: authentik
          namespace: traefik
  tls:
    certResolver: letsencrypt
    domains:
      - main: nerine.dev
        sans:
          - "*.nerine.dev"
